devops/mongo/mongoexpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress-deployment
  namespace: default
  labels:
    app: mongoexpress-app
spec:
    replicas: 1
    selector:
      matchLabels:
          app: mongoexpress-label
    template:
      metadata:
        labels:
          app: mongoexpress-label
      spec:
        containers:
          - name: mongoexpress
            image: mongo-express
            ports:
              - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-service
  namespace: default
  labels:
    app: mongoexpress-label
spec:
    selector:
        app: mongoexpress-label
#    type: LoadBalancer #externalizes this service (on minikube, use "minikube service mongoexpress-service" to open the service in the browser)
    ports:
        - port: 8082 # cluster-internal port - relevant if another service wanted to access this service
          targetPort: 8081
          protocol: TCP
#          nodePort: 30000 #external port (between 30000 and 32767) - routes to the service's port on 8082, which routes to the container's port on 8081

---
