devops/mongo/mongo-ingress.yaml
# ingress for mongo-express (proper alternative to LoadBalancer)

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpress-ingress
  namespace: default
  annotations:
#      nginx.ingress.kubernetes.io/rewrite-target: /$1
      nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
      nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
#  tls:
#    - hosts:
#        - "mongo-express.com"
#      secretName: nginx-tls-secret
  tls:
    - hosts:
        - "mongo-express.com"
      secretName: tls-secret
  rules:
    - host: "mongo-express.com" # Has to be a reachable hostname. For testing, add this line to the hosts file
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mongoexpress-service
              port:
                number: 8082
